--- a/fix-hero/src/assets/sass/scrolltotop.scss
+++ b/fix-hero/src/assets/sass/scrolltotop.scss
@@ -12,8 +12,8 @@
   border: none;
   transition: 1s;
   border-radius: 50%;
-  height: 3rem;
-  width: 3rem;
+  height: 2.5rem;
+  width: 2.5rem;
   display: none;
   align-items: center;
   justify-content: center;
